--- a/readthedocsext/theme/templates/support/success.html
+++ b/readthedocsext/theme/templates/support/success.html
@@ -4,7 +4,7 @@
 
 {% block title %}
   {% trans "Support request submitted" %}
-{% endblock %}
+{% endblock title %}
 
 {% block support_form %}
   <div class="ui positive message">
