--- a/readthedocsext/theme/templates/account/signup.html
+++ b/readthedocsext/theme/templates/account/signup.html
@@ -6,7 +6,7 @@
 
 {% block head_title %}
   {% trans "Sign up" %}
-{% endblock %}
+{% endblock head_title %}
 
 {% block authentication_header %}
   {% trans "Sign up to continue" %}
