--- a/readthedocsext/theme/templates/projects/partials/edit/environment_variable_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/environment_variable_list.html
@@ -15,9 +15,11 @@
   {% url "projects_environmentvariables_create" project_slug=project.slug as create_url %}
   {% trans "Add variable" as create_text %}
   {% include "includes/crud/create_button.html" with url=create_url text=create_text %}
-{% endblock %}
+{% endblock create_button %}
 
-{% block list_placeholder_icon_class %}fa-duotone fa-shield-keyhole{% endblock %}
+{% block list_placeholder_icon_class %}
+  fa-duotone fa-shield-keyhole
+{% endblock list_placeholder_icon_class %}
 {% block list_placeholder_header %}
   {% blocktrans trimmed %}
     No environment variables have been configured yet
