--- a/readthedocsext/theme/templates/projects/partials/edit/keys_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/keys_list.html
@@ -13,7 +13,8 @@
   Do not show an empty menu bar at the top. Once users can add SSH keys, we can
   remove this override and enable the ``create_button`` block
 {% endcomment %}
-{% block top_menu %}{% endblock %}
+{% block top_menu %}
+{% endblock top_menu %}
 {% block create_button %}
   {% comment %}
   {# TODO this is not supported currently, and is an admin only action #}
@@ -21,9 +22,11 @@
   {% trans "Add SSH key" as create_text %}
   {% include "includes/crud/create_button.html" with url=create_url text=create_text %}
   {% endcomment %}
-{% endblock %}
+{% endblock create_button %}
 
-{% block list_placeholder_icon_class %}fa-duotone fa-lock-keyhole{% endblock %}
+{% block list_placeholder_icon_class %}
+  fa-duotone fa-lock-keyhole
+{% endblock list_placeholder_icon_class %}
 {% block list_placeholder_header %}
   {% blocktrans trimmed %}
     No SSH keys are configured for this project.
@@ -53,5 +56,7 @@
   </a>
 {% endblock list_item_header %}
 
-{% block list_item_meta %}{% endblock %}
-{% block list_item_extra %}{% endblock %}
+{% block list_item_meta %}
+{% endblock list_item_meta %}
+{% block list_item_extra %}
+{% endblock list_item_extra %}
