--- a/readthedocsext/theme/templates/projects/base_dashboard.html
+++ b/readthedocsext/theme/templates/projects/base_dashboard.html
@@ -24,34 +24,30 @@
       {% include "projects/partials/project_list.html" with objects=project_list %}
     </div>
     <div class="five wide computer only column">
-      <div class="ui basic horizontally fitted segment">
-        <div class="ui one cards">
 
-          {% comment %}
-            Include a feature promotion in the right bar.
+      {% comment %}
+        Include an announcement in the side bar.
 
-            The promotion HTML to include comes from the backend at `ProjectDashboard` view.
-          {% endcomment %}
-          {% if promotion %}
-            {% include promotion %}
-          {% endif %}
+        The announcement template to include comes from the application view `ProjectDashboard`.
+      {% endcomment %}
+      {% if announcement %}
+        {% include announcement %}
+      {% endif %}
 
-          <div class="ui basic segment">
-            <h2 class="ui small header">{% trans "Help topics" %}</h2>
-            <div class="ui mini header">{% trans "Tutorials" %}</div>
-            <div class="ui bulleted list">
-              {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/tutorial/index.html" text="Getting started" is_external=True class="item" %}
-              {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/intro/getting-started-with-sphinx.html" text="Getting started with Sphinx" is_external=True class="item" %}
-              {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/intro/getting-started-with-mkdocs.html" text="Getting started with MkDocs" is_external=True class="item" %}
-              {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/intro/import-guide.html" text="Creating a project" is_external=True class="item" %}
-            </div>
+      <div class="ui basic segment">
+        <h2 class="ui small header">{% trans "Help topics" %}</h2>
+        <div class="ui mini header">{% trans "Tutorials" %}</div>
+        <div class="ui bulleted list">
+          {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/tutorial/index.html" text="Getting started" is_external=True class="item" %}
+          {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/intro/getting-started-with-sphinx.html" text="Getting started with Sphinx" is_external=True class="item" %}
+          {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/intro/getting-started-with-mkdocs.html" text="Getting started with MkDocs" is_external=True class="item" %}
+          {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/intro/import-guide.html" text="Creating a project" is_external=True class="item" %}
+        </div>
 
-            <div class="ui mini header">{% trans "Reference" %}</div>
-            <div class="ui bulleted list">
-              {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/config-file/index.html" text="Configuration file reference" is_external=True class="item" %}
-              {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/build-customization.html" text="Build process customization" is_external=True class="item" %}
-            </div>
-          </div>
+        <div class="ui mini header">{% trans "Reference" %}</div>
+        <div class="ui bulleted list">
+          {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/config-file/index.html" text="Configuration file reference" is_external=True class="item" %}
+          {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/build-customization.html" text="Build process customization" is_external=True class="item" %}
         </div>
       </div>
     </div>
