--- a/readthedocsext/theme/templates/projects/partials/announcements/traffic-analytics.html
+++ b/readthedocsext/theme/templates/projects/partials/announcements/traffic-analytics.html
@@ -1,10 +1,11 @@
-{% load i18n %}
+{% load blocktrans trans from i18n %}
 
 {% with "https://docs.readthedocs.io/page/analytics.html" as url %}
   <div data-bind="using: new ProjectAnnouncementView('traffic-analytics')">
-    <div class="ui card ko hidden" data-bind="css: { hidden: closed }">
+    <div class="ui fluid card ko hidden" data-bind="css: { hidden: closed }">
       <div class="content">
-        <i class="fa-solid fa-xmark right floated close icon"  data-bind="click: close_announcement"></i>
+        <i class="fa-solid fa-xmark right floated close icon"
+           data-bind="click: close_announcement"></i>
         <a class="header" target="_blank" href="{{ url }}">{% trans "Prioritize your most-read pages" %}</a>
         <div class="description">
           {% blocktrans %}
@@ -15,9 +16,9 @@
         </div>
       </div>
       <div class="ui extra content">
-        <a class="ui small primary fluid basic button" target="_blank" href="{{ url }}">
-          {% trans "Enable analytics" %}
-        </a>
+        <a class="ui small primary fluid basic button"
+           target="_blank"
+           href="{{ url }}">{% trans "Enable analytics" %}</a>
       </div>
     </div>
   </div>
