--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -68,44 +68,45 @@
           {# Build metadata on the right #}
           {% block build_detail_metadata_right %}
             <div class="ui five wide middle aligned column">
-              <div class="ui relaxed list">
+              <div class="ui relaxed list ko hidden" data-bind="css: { hidden: is_loading() }">
                 <div class="item">
                   <i class="grey fa-duotone fa-calendar icon"></i>
-                  <div class="content" data-bind="if: !is_loading()">
-                    <div data-bind="attr: { 'data-tooltip': date_display() }, text: '{% trans "Build started" %} ' + date_display_since()">
-                    </div>
+                  <div class="content">
+                    <span class="sub header">{% trans "Started" %}</span>
+                    <time data-bind="attr: { 'data-tooltip': date_display() }, text: date_display_since"></time>
                   </div>
                 </div>
 
                 <div class="item">
                   <i class="grey fa-duotone fa-clock icon"></i>
-                  <div class="content" data-bind="if: is_finished">
-                    <div data-bind="text: '{% trans "Build took %d" %}'.replace('%d', length_display())">
-                    </div>
+                  <div class="content">
+                    <span class="sub header">{% trans "Duration" %}</span>
+                    <span data-bind="text: length_display"></span>
                   </div>
                 </div>
 
-                {# Version type is static, so we can skip some KO code #}
+                {# Version type is static, and some of these attributes are not in the APIv2 response  #}
                 <div class="item">
-                  <i class="grey fa-duotone {{ build.is_external | yesno:"fa-code-pull-request,fa-tag" }} icon"></i>
-                  <div class="content" data-bind="if: !is_loading()">
+                  <i class="grey fa-duotone {{ build.is_external | yesno:"fa-code-pull-request,fa-code-branch" }} icon"></i>
+                  <div class="content">
                     {% if build.is_external %}
-                      {{ build.external_version_name | lower | capfirst }}
+                      <span class="sub header">
+                        {{ build.external_version_name | lower | capfirst }}
+                      </span>
                       <a href="{{ build.version.vcs_url }}"><code>#{{ build.get_version_name }}</code></a>
                     {% else %}
-                      <code>
-                        <a href="{% url "builds_project_list" build.project.slug %}?version__slug={{ build.get_version_slug }}">
-                          {{ build.get_version_name }}
-                        </a>
-                      </code>
+                      <span class="sub header">{{ build.get_version_type | lower | capfirst }}</span>
+                      {{ build.get_version_name }}
                     {% endif %}
-                  </div>
-                </div>
-
-                <div class="item" data-bind="visible: commit_short">
-                  <i class="grey fa-duotone fa-code-branch icon"></i>
-                  <div class="content" data-bind="if: !is_loading()">
-                    <a data-bind="attr: {href: commit_url}"><code data-bind="text: commit_short"></code></a>
+                    <code class="ko hidden" data-bind="css: { hidden: !commit() }">
+                      <a data-bind="attr: {href: commit_url}">
+                        {% spaceless %}
+                          <span>(</span>
+                          <span data-bind="text: commit_short">{{ build.commit }}</span>
+                          <span>)</span>
+                        {% endspaceless %}
+                      </a>
+                    </code>
                   </div>
                 </div>
 
