--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -1,6 +1,6 @@
 {% extends "projects/base.html" %}
 
-{% load trans from i18n %}
+{% load blocktrans trans from i18n %}
 {% load is_admin from privacy_tags %}
 
 {% block title %}
@@ -68,7 +68,8 @@
           {# Build metadata on the right #}
           {% block build_detail_metadata_right %}
             <div class="ui five wide middle aligned column">
-              <div class="ui relaxed list ko hidden" data-bind="css: { hidden: is_loading() }">
+              <div class="ui relaxed list ko hidden"
+                   data-bind="css: { hidden: is_loading() }">
                 <div class="item">
                   <i class="grey fa-duotone fa-calendar icon"></i>
                   <div class="content">
@@ -170,37 +171,23 @@
       </div>
     </div>
 
-    {# TODO: remove this `build.output block completely #}
     {% if build.output %}
-      {# djlint: off H021 #}
-      {# If we have build output, this is an old build #}
-      <p>
-        <button data-bind="visible: !legacy_output(), click: show_legacy_output">
-          {% trans "Show full build output" %}
-        </button>
-      </p>
-
-      <div data-bind="visible: legacy_output" style="display: none;">
-        <h3>{% trans "Build Output" %}</h3>
-        <pre class="build-output"><span id="build-output">{{ build.output }}</span></pre>
-
-        {% if build.setup %}
-          <h3>{% trans "Setup Output" %}</h3>
-          <pre class="build-output"><span id="build-setup">{{ build.setup }}</span></pre>
-        {% endif %}
-
-        {% if build.setup_error %}
-          <h3>{% trans "Environment Standard Error" %}</h3>
-          <pre class="ui negative message"><span id="build-setup_error">{{ build.setup_error }}</span></pre>
-        {% endif %}
+      {% comment %}
+        This is a very old build type, before we supported individual build
+        commands. It is very not supported anymore so we'll just throw an error
+        so we're not silently failing.
+      {% endcomment %}
+      <div class="ui inverted notification error message">
+        <div class="header">
+          <i class="fas fa-exclamation-circle icon"></i>
+          {% trans "Build output unavailable" %}
+        </div>
+        <p>
+          {% blocktrans %}
+            Due to the age of this build, the output of this build is no longer available.
+          {% endblocktrans %}
+        </p>
       </div>
-
-      {% if build.error %}
-        <h3>{% trans "Build Errors" %}</h3>
-        <pre class="ui negative message"><span id="build-error">{{ build.error }}</span></pre>
-      {% endif %}
-
-      {# djlint: on H021 #}
     {% else %}
 
       {% block build_detail_notifications %}
@@ -287,15 +274,12 @@
           </tbody>
         </table>
 
-        {# djlint: off H021 #}
-        {# TODO replace with `class="ko hidden"` #}
-        <div data-bind="visible: is_polling() && !is_loading()"
-             style="display: none">
+        <div class="ko hidden"
+             data-bind="css: { hidden: is_loading() || !is_polling() }">
           <div data-bind="visible: is_polling"
                class="ui active inverted mini centered inline text loader">
           </div>
         </div>
-        {# djlint: on H021 #}
 
       </div>
     {% endif %}
