--- a/readthedocsext/theme/templates/includes/elements/chips/base.html
+++ b/readthedocsext/theme/templates/includes/elements/chips/base.html
@@ -18,10 +18,10 @@
 
 {% endcomment %}
 {# This is probably used inside another KO `with` binding, so we need to reference the root ApplicationView #}
-<div data-bind="with: $root.PopupcardView({% spaceless %}{% block chip_view_params %}{% endblock %}{% endspaceless %})">
-  <a class="ui {% spaceless %}{% block chip_classes %}basic{% endblock %}{% endspaceless %} label"
+<div data-bind="with: $root.PopupcardView({% spaceless %}{% block chip_view_params %}{% endblock chip_view_params %}{% endspaceless %})">
+  <a class="ui {% spaceless %}{% block chip_classes %}basic{% endblock chip_classes %}{% endspaceless %} label"
      data-bind="semanticui: { popup: popup_config() }"
-     href="{% spaceless %}{% block chip_url %}{% endblock %}{% endspaceless %}">
+     href="{% spaceless %}{% block chip_url %}{% endblock chip_url %}{% endspaceless %}">
 
     {% comment "rst" %}
 
@@ -67,8 +67,10 @@
       </div>
     {% endblock chip_detail %}
   </a>
-  <div class="ui fluid popup" data-bind="using: data, css: { loading: is_loading() }">
-    <div class="ui small wide basic horizontal card" data-bind="if: $parent.is_loaded()">
+  <div class="ui flowing popup"
+       data-bind="using: data, css: { loading: is_loading() }">
+    <div class="ui small basic horizontal card"
+         data-bind="if: $parent.is_loaded()">
 
       {% comment "rst" %}
 
@@ -95,7 +97,7 @@
 
         {% endcomment %}
         {% block popupcard_right %}
-        {% endblock %}
+        {% endblock popupcard_right %}
 
         <div class="header">
           {% comment "rst" %}
@@ -135,14 +137,14 @@
       </div>
 
       <div class="extra content">
-          {% comment "rst" %}
+        {% comment "rst" %}
 
             .. describe:: popupcard_extra
 
                The extra content for the card, a line for metadata below the card
                content.
 
-          {% endcomment %}
+        {% endcomment %}
         {% block popupcard_extra %}
         {% endblock popupcard_extra %}
       </div>
