--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -96,7 +96,7 @@
     {% with build=object.get_latest_build %}
       {# Safety check, there seems to be some case where `has_good_build` and `get_latest_build` still return a null build #}
       {% if build %}
-        {% include "includes/elements/chips/build.html" with project=project build=build %}
+        {% include "includes/elements/chips/build.html" with project=object build=build %}
       {% endif %}
     {% endwith %}
   {% endif %}
